keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - keycloak.k8s.kunst.me
      secretName: tls-production
  rules:
    - host: keycloak.k8s.kunst.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-svc
                port:
                  number: 8080
